fix overflow and adjust distance between videos

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
   background-color: black;
   min-height: 100vh;
+  overflow: hidden;
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
 .App h1 {
